--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,55 +4,78 @@
     android:layout_height="match_parent">
 
     <LinearLayout
-        android:layout_width="100dp"
-        android:layout_height="match_parent"
-        android:background="#FFFFFF">
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:orientation="vertical">
-
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="50dp">
-
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
             <Button
                 android:id="@+id/h_name"
-                android:layout_width="150dp"
-                android:layout_height="match_parent"
-                android:text="@string/h_name" />
-
-            <Button
-                android:id="@+id/h_price"
-                android:layout_width="90dp"
-                android:layout_height="match_parent"
-                android:text="@string/h_price"
-                android:textSize="6pt" />
-
-            <Button
-                android:id="@+id/h_min_price"
-                android:layout_width="90dp"
-                android:layout_height="match_parent"
-                android:text="@string/h_min_price"
-                android:textSize="6pt" />
-
-            <Button
-                android:id="@+id/h_max_price"
-                android:layout_width="90dp"
-                android:layout_height="match_parent"
-                android:text="@string/h_max_price"
-                android:textSize="6pt" />
+                android:layout_width="120dp"
+                android:layout_height="50dp"
+                android:text="@string/h_name"
+                android:textSize="10pt" />
+            <ListView
+                android:id="@+id/record_name_list"
+                android:layout_width="120dp"
+                android:layout_height="match_parent" />
         </LinearLayout>
 
-        <ListView
-            android:id="@+id/record_list_view"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+        <HorizontalScrollView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:layout_margin="0dp"
+            android:padding="0dp">
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="vertical"
+                android:layout_margin="0dp"
+                android:padding="0dp">
+
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp">
+
+                    <Button
+                        android:id="@+id/h_price"
+                        android:layout_width="100dp"
+                        android:layout_height="match_parent"
+                        android:text="@string/h_price"
+                        android:textSize="6pt" />
+
+                    <Button
+                        android:id="@+id/h_min_price"
+                        android:layout_width="100dp"
+                        android:layout_height="match_parent"
+                        android:text="@string/h_min_price"
+                        android:textSize="6pt" />
+
+                    <Button
+                        android:id="@+id/h_max_price"
+                        android:layout_width="100dp"
+                        android:layout_height="match_parent"
+                        android:text="@string/h_max_price"
+                        android:textSize="6pt" />
+                </LinearLayout>
+
+                <ListView
+                    android:id="@+id/record_list"
+
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+
+
+            </LinearLayout>
+
+
+        </HorizontalScrollView>
 
 
     </LinearLayout>
