--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,84 +1,103 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<android.support.v4.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:openDrawer="start" >
 
-    <LinearLayout
+    <FrameLayout
+        android:id="@+id/content_frame"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent" >
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-            <Button
-                android:id="@+id/h_name"
-                android:layout_width="120dp"
-                android:layout_height="50dp"
-                android:text="@string/h_name"
-                android:textSize="10pt" />
-            <ListView
-                android:id="@+id/record_name_list"
-                android:layout_width="120dp"
-                android:layout_height="match_parent" />
-        </LinearLayout>
-
-        <HorizontalScrollView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:layout_margin="0dp"
-            android:padding="0dp">
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
             <LinearLayout
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:orientation="vertical"
-                android:layout_margin="0dp"
-                android:padding="0dp">
+                android:orientation="vertical">
 
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp">
-
-                    <Button
-                        android:id="@+id/h_price"
-                        android:layout_width="100dp"
-                        android:layout_height="match_parent"
-                        android:text="@string/h_price"
-                        android:textSize="6pt" />
-
-                    <Button
-                        android:id="@+id/h_min_price"
-                        android:layout_width="100dp"
-                        android:layout_height="match_parent"
-                        android:text="@string/h_min_price"
-                        android:textSize="6pt" />
-
-                    <Button
-                        android:id="@+id/h_max_price"
-                        android:layout_width="100dp"
-                        android:layout_height="match_parent"
-                        android:text="@string/h_max_price"
-                        android:textSize="6pt" />
-                </LinearLayout>
+                <Button
+                    android:id="@+id/h_name"
+                    android:layout_width="120dp"
+                    android:layout_height="50dp"
+                    android:text="@string/h_name"
+                    android:textSize="10pt" />
 
                 <ListView
-                    android:id="@+id/record_list"
-
-                    android:layout_width="match_parent"
+                    android:id="@+id/record_name_list"
+                    android:layout_width="120dp"
                     android:layout_height="match_parent" />
-
-
             </LinearLayout>
 
+            <HorizontalScrollView
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_margin="0dp"
+                android:layout_weight="1"
+                android:padding="0dp">
 
-        </HorizontalScrollView>
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_margin="0dp"
+                    android:layout_weight="1"
+                    android:orientation="vertical"
+                    android:padding="0dp">
 
 
-    </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp">
+
+                        <Button
+                            android:id="@+id/h_price"
+                            android:layout_width="100dp"
+                            android:layout_height="match_parent"
+                            android:text="@string/h_price"
+                            android:textSize="6pt" />
+
+                        <Button
+                            android:id="@+id/h_min_price"
+                            android:layout_width="100dp"
+                            android:layout_height="match_parent"
+                            android:text="@string/h_min_price"
+                            android:textSize="6pt" />
+
+                        <Button
+                            android:id="@+id/h_max_price"
+                            android:layout_width="100dp"
+                            android:layout_height="match_parent"
+                            android:text="@string/h_max_price"
+                            android:textSize="6pt" />
+                    </LinearLayout>
+
+                    <ListView
+                        android:id="@+id/record_list"
+
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent" />
 
 
-</LinearLayout>
+                </LinearLayout>
+            </HorizontalScrollView>
+        </LinearLayout>
+    </FrameLayout>
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/left_drawer"
+        android:scrollbars="vertical"
+        android:layout_width="240dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="left|start"
+        android:choiceMode="singleChoice"
+        android:divider="@null"
+        />
+
+</android.support.v4.widget.DrawerLayout>
