--- a/app/src/main/res/layout/record_name.xml
+++ b/app/src/main/res/layout/record_name.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="300dp">
+    android:layout_height="80dp">
 
 
     <TextView
         android:id="@+id/name"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:textSize="8pt"
+        android:gravity="center"
+        android:textSize="10pt"
         android:textColor="#000000"
      />
 
