--- a/app/src/main/res/layout/dialog_search.xml
+++ b/app/src/main/res/layout/dialog_search.xml
@@ -1,52 +1,93 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="250dp"
-    android:layout_height="400dp">
+    android:layout_height="400dp"
+    android:orientation="vertical">
+
     <ImageView
-        android:src="@drawable/ic_launcher"
         android:layout_width="match_parent"
         android:layout_height="64dp"
-        android:scaleType="center"
         android:background="#FFFFBB33"
-        android:contentDescription="@string/app_name" />
+        android:contentDescription="@string/app_name"
+        android:scaleType="center"
+        android:src="@drawable/ic_launcher" />
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/duration"
-        android:gravity="center"/>
+        android:gravity="center"
+        android:text="@string/duration" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal">
+
         <ToggleButton
-            android:id="@+id/toggle_min"
+            android:id="@+id/toggle_min_max"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textOn="@string/toggle_max"
-            android:textOff="@string/toggle_min"
             android:background="@drawable/min_max_toggle"
             android:textColor="#fafafa"
-            android:textStyle="bold"
+            android:textOff="@string/toggle_min"
+            android:textOn="@string/toggle_max"
             android:textSize="8pt"
-            />
+            android:textStyle="bold" />
+
 
         <Spinner
             android:id="@+id/duration"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content" />
     </LinearLayout>
 
-    <EditText
-        android:id="@+id/password2"
-        android:inputType="textPassword"
+
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:layout_marginLeft="4dp"
-        android:layout_marginRight="4dp"
-        android:layout_marginBottom="16dp"
-        android:fontFamily="sans-serif"
-        android:hint="password"/>
+        android:layout_gravity="center_horizontal">
+
+
+        <TextView
+            android:id="@+id/txt_floating_point"
+            android:layout_width="wrap_content"
+            android:layout_height="130dp"
+            android:layout_centerHorizontal="true"
+            android:gravity="top"
+            android:text="."
+            android:textSize="40pt" />
+
+        <NumberPicker
+            android:id="@+id/picker_float"
+            android:layout_width="wrap_content"
+            android:layout_height="130dp"
+            android:layout_alignParentTop="true"
+            android:layout_toRightOf="@id/txt_floating_point"
+            android:saveEnabled="true" />
+
+        <TextView
+            android:id="@+id/txt_percentage"
+            android:layout_width="wrap_content"
+            android:layout_height="130dp"
+            android:layout_alignBottom="@id/picker_float"
+            android:layout_toEndOf="@id/picker_float"
+            android:layout_toRightOf="@id/picker_float"
+            android:gravity="center_vertical"
+            android:text="%"
+            android:textSize="30pt" />
+
+        <NumberPicker
+            android:id="@+id/picker_decimal"
+            android:layout_width="wrap_content"
+            android:layout_height="130dp"
+
+            android:saveEnabled="true"
+            android:layout_alignParentTop="true"
+            android:layout_toLeftOf="@+id/txt_floating_point"
+            android:layout_toStartOf="@+id/txt_floating_point" />
+    </RelativeLayout>
 
 </LinearLayout>
+
+
+
