--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,8 @@
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:openDrawer="start">
+    tools:openDrawer="start"
+    >
 
     <FrameLayout
         android:id="@+id/content_frame"
@@ -35,23 +36,21 @@
             </LinearLayout>
 
             <HorizontalScrollView
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_margin="0dp"
-                android:layout_weight="1"
+                android:alwaysDrawnWithCache="true"
                 android:padding="0dp">
 
                 <LinearLayout
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:layout_margin="0dp"
-                    android:layout_weight="1"
                     android:orientation="vertical"
                     android:padding="0dp">
 
 
                     <LinearLayout
-                        android:layout_width="match_parent"
+                        android:id="@+id/header"
+                        android:layout_width="wrap_content"
                         android:layout_height="50dp">
 
                         <Button
@@ -61,19 +60,6 @@
                             android:text="@string/h_price"
                             android:textSize="6pt" />
 
-                        <Button
-                            android:id="@+id/h_min_price"
-                            android:layout_width="100dp"
-                            android:layout_height="match_parent"
-                            android:text="@string/h_min_price"
-                            android:textSize="6pt" />
-
-                        <Button
-                            android:id="@+id/h_max_price"
-                            android:layout_width="100dp"
-                            android:layout_height="match_parent"
-                            android:text="@string/h_max_price"
-                            android:textSize="6pt" />
                     </LinearLayout>
 
                     <ListView
