--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,5 @@
     <color name="colorAccent">#FF4081</color>
     <color name="min">#fe0003ff</color>
     <color name="max">#ffff1b0e</color>
-
+    <color name="orange">#ffffc741</color>
 </resources>
