--- a/app/src/main/res/layout/dialog_search.xml
+++ b/app/src/main/res/layout/dialog_search.xml
@@ -13,11 +13,12 @@
         android:src="@drawable/ic_launcher" />
 
     <TextView
+        android:id="@+id/dialog_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="@string/duration"
-        android:textSize="10pt"
+        android:textSize="12pt"
         android:textStyle="bold"
         android:background="#ffff882e"
         android:textColor="#FFFFFF"/>
